// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should return $result for $switchValue 1`] = `
<div>
  Banana
</div>
`;

exports[`Switch should return $result for $switchValue 2`] = `
<div>
  Fruit not found
</div>
`;

exports[`Switch should return first case matching switchValue 1`] = `
<div>
  Apple 1
</div>
`;

exports[`Switch should return neither case nor default 1`] = `<div />`;
